RESOLVED FIXED 204983
[LFC][IFC] Fix css1/formatting_model/floating_elements.html
https://bugs.webkit.org/show_bug.cgi?id=204983
Summary [LFC][IFC] Fix css1/formatting_model/floating_elements.html
alan
Reported 2019-12-07 05:35:20 PST
This is the first left-floating paragraph <- break at "-"
Attachments
Patch (2.54 KB, patch)
2019-12-07 05:46 PST, alan
koivisto: review+
Radar WebKit Bug Importer
Comment 1 2019-12-07 05:38:13 PST
alan
Comment 2 2019-12-07 05:46:06 PST
alan
Comment 3 2019-12-07 06:02:10 PST
Note You need to log in before you can comment on or make changes to this bug.