[LFC][IFC] Fix css1/formatting_model/floating_elements.html https://bugs.webkit.org/show_bug.cgi?id=204983 <rdar://problem/57727197>

Reviewed by Antti Koivisto.

Adjacent non-whitespace inline items are guaranteed to be on commit boundary when they both belong
to the same layout box (<div>text-content</div> [text-][content] vs <div>textcontent</div> [textcontent]).

* layout/inlineformatting/InlineLineBreaker.cpp:
(WebCore::Layout::LineBreaker::Content::isAtContentBoundary):

Canonical link: https://commits.webkit.org/218199@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253252 268f45cc-cd09-0410-ab3c-d52691b4dbfc